<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".feature.about.AboutActivity"
	android:clipChildren="false"
	android:clipToPadding="false">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".feature.about.AboutActivity"
		android:clipChildren="false"
		android:clipToPadding="false">

		<Button
			android:id="@+id/lottie_btn"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent"
			android:text="@string/lottie_btn"
			android:textAllCaps="false"
			android:textColor="@color/meterGreen"
			android:textSize="18sp"
			app:layout_constraintEnd_toEndOf="@+id/about_tv"
			app:layout_constraintHorizontal_bias="0.501"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/about_lottie_tv" />

		<TextView
			android:id="@+id/about_lottie_tv"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="32dp"
			android:background="@color/activityBackground"
			android:paddingStart="20dp"
			android:paddingTop="12dp"
			android:paddingEnd="20dp"
			android:text="@string/lottie_attribution"
			android:textAlignment="center"
			android:textColor="@color/tasklistItemText"
			android:textSize="15sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="0.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/todometer_gh_btn" />

		<TextView
			android:id="@+id/about_tv2"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="32dp"
			android:background="@color/activityBackground"
			android:paddingStart="20dp"
			android:paddingTop="12dp"
			android:paddingEnd="20dp"
			android:text="@string/about_original"
			android:textAlignment="center"
			android:textColor="@color/tasklistItemText"
			android:textSize="15sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/android_gh_btn" />

		<Button
			android:id="@+id/android_gh_btn"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent"
			android:drawableStart="@drawable/ic_github"
			android:text="@string/todometer_android_gh"
			android:textAllCaps="false"
			android:textColor="@color/meterGreen"
			android:textSize="24sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="@+id/about_tv"
			app:layout_constraintTop_toBottomOf="@+id/about_tv" />

		<Button
			android:id="@+id/todometer_gh_btn"
			style="@style/Widget.AppCompat.Button.Borderless"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:background="@android:color/transparent"
			android:drawableStart="@drawable/ic_github"
			android:text="@string/todometer_gh"
			android:textAllCaps="false"
			android:textColor="@color/meterGreen"
			android:textSize="24sp"
			app:layout_constraintEnd_toEndOf="@+id/about_tv"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/about_tv2" />

		<ImageView
			android:id="@+id/logo_iv"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_marginTop="20dp"
			android:contentDescription="@string/app_name"
			android:src="@mipmap/ic_launcher_full"
			app:layout_constraintBottom_toTopOf="@+id/horizontal_thirty_percent"
			app:layout_constraintEnd_toEndOf="@+id/about_tv"
			app:layout_constraintStart_toStartOf="@+id/about_tv"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/about_tv"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:background="@color/activityBackground"
			android:includeFontPadding="false"
			android:paddingStart="20dp"
			android:paddingTop="12dp"
			android:paddingEnd="20dp"
			android:text="@string/about_text"
			android:textAlignment="center"
			android:textColor="@color/tasklistItemText"
			android:textSize="15sp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="@+id/horizontal_thirty_percent" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/horizontal_thirty_percent"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			app:layout_constraintGuide_begin="20dp"
			app:layout_constraintGuide_percent=".3" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/vertical_half"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_percent=".5"
			/>

		<com.airbnb.lottie.LottieAnimationView
			android:id="@+id/confetti_animation_view"
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:alpha="0"
			android:scaleType="centerCrop"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:lottie_rawRes="@raw/confetti" />

	</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
